--- a/_config.yaml
+++ b/_config.yaml
@@ -1,19 +1,17 @@
 # site properties and page defaults
 title: criifusion
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: Sensors are all around us collecting data. Each sensor may provide complementary or reinforced information that supports tasks such as target detection, classification, or scene understanding. This project develops weakly supervised learning methods for multi-source data integration accounting for both data and label uncertainty.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
 
 # site social media and other links
 links:
-  email: contact@criifusion.com
-  orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
+  #email: contact@criifusion.com
+  #orcid: 0000-0001-8713-9213
+  #google-scholar: ETJoidYAAAAJ
   github: criifusion
-  twitter: criifusion
-  youtube: criifusion
 
 ### jekyll settings
 
