--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -5,7 +5,7 @@
   #image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
   buttons:
     - type: source
-      text: Code Repo
+      text: Repo
       link: https://github.com/hvak/MIMRF-BFM
   repo: hvak/MIMRF-BFM
 - id: doi:10.1109/FUZZ-IEEE60900.2024.10611865
@@ -15,9 +15,24 @@
   #image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
   buttons:
     - type: source
-      text: Code Repo
+      text: Repo
       link: https://github.com/hvak/Bi-MIChI
   repo: hvak/Bi-MIChI
+- id: doi:10.1109/ITSC58415.2024.10920115
+  type: paper
+  #description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  date: 2024-09-24
+  #image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  buttons:
+    - type: source
+      text: Repo
+      link: https://github.com/XiangboGaoBarry/MambaST
+  repo: XiangboGaoBarry/MambaST
+- id: doi:10.23919/ICCAS63016.2024.10773333
+  type: paper
+  #description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+  date: 2024-10-29
+  #image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
 - title: "Temporal CFT: Multi-Temporal Cross-Modality Fusion Transformer for Multispectral Video Object Detection"
   type: poster
   date: 2023-10-01
@@ -31,3 +46,15 @@
     - type: link
       text: Poster
       link: https://xiaoxiaodu.net/wp-content/uploads/2024/01/IROS2023_Poster_Srikar.pdf
+- title: "MIC-AQT: Improving Domain Adaptive Object Detection of Adversarial Query Transformers with Masked Image Consistency"
+  type: poster
+  date: 2023-10-01
+  authors:
+    - Peter Stratton
+    - Xiaoxiao Du
+  publisher: IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)
+  link: https://xiaoxiaodu.net/wp-content/uploads/2024/01/IROS_Poster_Abstract_2023-1.pdf
+  buttons:
+    - type: link
+      text: Poster
+      link: https://xiaoxiaodu.net/wp-content/uploads/2024/01/IROS2023_Poster_Peter.pdf
