--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -33,6 +33,9 @@
     - type: source
       text: Repo
       link: https://github.com/XiangboGaoBarry/MambaST
+    - type: link
+      text: arXiv
+      link: https://arxiv.org/abs/2408.01037
   repo: XiangboGaoBarry/MambaST
 - id: doi:10.23919/ICCAS63016.2024.10773333
   #description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -40,6 +43,7 @@
   #image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
 - title: "Temporal CFT: Multi-Temporal Cross-Modality Fusion Transformer for Multispectral Video Object Detection"
   date: 2023-10-01
+  image: images/temporal_cft.png
   authors:
     - Srikar Varaganti
     - Asiegbu Miracle Kanu-Asiegbu
@@ -50,11 +54,9 @@
     - type: link
       text: Poster
       link: https://xiaoxiaodu.net/wp-content/uploads/2024/01/IROS2023_Poster_Srikar.pdf
-    - type: link
-      text: arXiv
-      link: https://arxiv.org/abs/2408.01037
 - title: "MIC-AQT: Improving Domain Adaptive Object Detection of Adversarial Query Transformers with Masked Image Consistency"
   date: 2023-10-01
+  image: images/mic_aqt.png
   authors:
     - Peter Stratton
     - Xiaoxiao Du
